// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export_star.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

export * from './typed_exports' // Ok
export type * from './typed_exports' // Ok

export * from './untyped_exports' // Error
export type * from './untyped_exports' // Error

=====================================output=====================================
/* @flow */

export * from "./typed_exports"; // Ok
export type * from "./typed_exports"; // Ok

export * from "./untyped_exports"; // Error
export type * from "./untyped_exports"; // Error

================================================================================
`;

exports[`imports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

/* Named Imports from Untyped File */
import {FooObj} from './untyped_exports.js'; //Error
import * as All from './untyped_exports.js'; //Error

/* Default Imports from Untyped File */
import BarObj from './untyped_exports.js'; //Error

/* Named Imports from Untyped File (That Just Don't Exist) */
import {BazObj} from './untyped_exports.js'; //Error

/* CJS Imports from Untyped File */
const BarObj2 = require("./untyped_exports"); //Error

/* \`\`Any\`\` Imports from Typed File */
import {AnyObj} from './typed_exports.js' //Not an error
import AnyObjDefault from './typed_exports.js' //Not an error

/* Imports from Nonexistent File */
//Only \`required module not found\` shown.
import {BeepObj} from './nonexistent.js';
import BoopObj from './nonexistent.js';

/* Suppressed Imports */
/* flowlint untyped-import:off */
import {WhizObj} from './untyped_exports.js'; //Error; Suppressed
import BangObj from './untyped_exports.js'; //Error; Suppressed
import * as All2 from './untyped_exports.js'; //Error; Suppressed
const BarObj3 = require("./untyped_exports"); //Error; Suppressed

=====================================output=====================================
/* @flow */

/* Named Imports from Untyped File */
import { FooObj } from "./untyped_exports.js"; //Error
import * as All from "./untyped_exports.js"; //Error

/* Default Imports from Untyped File */
import BarObj from "./untyped_exports.js"; //Error

/* Named Imports from Untyped File (That Just Don't Exist) */
import { BazObj } from "./untyped_exports.js"; //Error

/* CJS Imports from Untyped File */
const BarObj2 = require("./untyped_exports"); //Error

/* \`\`Any\`\` Imports from Typed File */
import { AnyObj } from "./typed_exports.js"; //Not an error
import AnyObjDefault from "./typed_exports.js"; //Not an error

/* Imports from Nonexistent File */
//Only \`required module not found\` shown.
import { BeepObj } from "./nonexistent.js";
import BoopObj from "./nonexistent.js";

/* Suppressed Imports */
/* flowlint untyped-import:off */
import { WhizObj } from "./untyped_exports.js"; //Error; Suppressed
import BangObj from "./untyped_exports.js"; //Error; Suppressed
import * as All2 from "./untyped_exports.js"; //Error; Suppressed
const BarObj3 = require("./untyped_exports"); //Error; Suppressed

================================================================================
`;

exports[`typed_exports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

const AnyObj: any = 7;

export {AnyObj};
export default AnyObj;

=====================================output=====================================
/* @flow */

const AnyObj: any = 7;

export { AnyObj };
export default AnyObj;

================================================================================
`;

exports[`untyped_exports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type FooType = {foo: string};
const FooObj: FooType = {foo: "fooStr"};

type BarType = {bar: number};
const BarObj: BarType = {bar: 0};

export {FooObj};

export default BarObj;

=====================================output=====================================
type FooType = { foo: string };
const FooObj: FooType = { foo: "fooStr" };

type BarType = { bar: number };
const BarObj: BarType = { bar: 0 };

export { FooObj };

export default BarObj;

================================================================================
`;
